Wed Nov 15 20:38:38 1995  Mark Eichin  <eichin@cygnus.com>

	* tf_util.c (emul_flock): initialize f to a copy of a static
 	(thus zero) struct flock, to avoid panic'ing sunos 4.1.4.

Sun Nov 12 05:26:08 1995  Mark W. Eichin  <eichin@cygnus.com>

	* g_cnffile.c (krb__get_srvtabname): new function, looks up
	[libdefaults]krb4_srvtab for use where KEYFILE used to be.
	* g_cnffile.c (krb__v5_get_file): new function, looks up argument
	in [libdefaults] and tries to open it as a filename. Returns
	filehandle (or NULL, if fopen failed.)
	(krb__get_cnffile, krb__get_realmsfile): use krb__v5_get_file to
	look up "krb4_config" or "krb4_realms" respectively. Also add
	$KRB_REALMS override for realms file.

Mon Oct  2 11:12:05 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (V5_MAKE_SHARED_LIB): Change rule to install
		version 0.1 of the library. Pass the libcrypto version
		number to Makefile

	* Makefile.in (CRYPTO_VER): Get the proper libcrypto version number

Mon Sep 25 16:54:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * DNR.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Mon Aug  7 18:40:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Include $(NETIO_SRCS) in the list of source
		files, instead of $(NETIO_OBJS)

	* tf_util.c (utimes): If __SVR4 is defined, #include <utime.h>,
		just as we do if __svr4__ is defined.

	* g_pw_in_tkt.c: If __SVR4 is defined, #include <sgtty.h>, just as
		we do if __svr4__ is defined.  (WARNING: This code still
		assumes that the BSD ioctl's are being supported, at least
		in compatibility mode.  We should really upgrade this code
		to use POSIX termios calls.)

Tue Jun 27 23:59:28 1995  Mark Eichin  <eichin@cygnus.com>

	* rd_req.c (krb_rd_req): from_addr is an address, so use unsigned
	KRB4_32 instead of long.

Tue Jun 27 23:50:08 1995  Mark Eichin  <eichin@cygnus.com>
