@@ -49,4 +49,6 @@ V5_MAKE_SHARED_LIB(libkrb4,0.1,.., ./krb4)
 CopyHeader(krb_err.h,$(EHDRDIR))
 CRYPTO_SH_VERS=$krb5_cv_shlib_version_libcrypto
 AC_SUBST(CRYPTO_SH_VERS)
+KRB5_SH_VERS=$krb5_cv_shlib_version_libkrb5
+AC_SUBST(KRB5_SH_VERS)
 V5_AC_OUTPUT_MAKEFILE
